@startuml
class Game {
    startGame()
    pauseGame()
    exitGame()
    handleUserInput()
    showBuildOptions()
}

class Map {
    move()
}

class MapCell {
    isBuildable()
}


class GameProgressionTracker {
    displayCountdown()
    gameOver()
}

class BuildingManager {
    buildableLocations
    buildingLocatable(building, row, col)
    proposeBuilding()
    buildBuilding()
}

abstract class Building {
    position
    width
    height
}

class Graphic {
    directory
    filename
    render()
}

class StaticScreen {
    showSelf()
    hideSelf()
    handleUserInput()
}

'Extensions
Building <|-- LectureHall
Building <|-- Accommodation
Building <|-- Restaurant
Building <|-- Gym

StaticScreen <|-- MainMenu
StaticScreen <|-- HowToPlay
StaticScreen <|-- GameOver

'Compositions
Game *-- Map
Game *-- BuildingManager
Game *-- GameProgressionTracker

Building *-- Graphic

'Associations
Map "0" -- "1..*" MapCell

BuildingManager "0" -- "1..*" Building
@enduml
